FP-387: UI Fix: Reduce complexity
* Define table cell width via 100%.
* Delete `_truncate`.
* Use `u-ellipsis1 directly.

--- a/client/src/components/Jobs/Jobs.scss
+++ b/client/src/components/Jobs/Jobs.scss
@@ -1,7 +1,6 @@
-/* TODO: FP-425: Use JavaScript instead */
 /* HACK: FP-103/FP-420: Should import via CSS Modules */
 /* WARNING: This is globally available; do NOT use its styles as such */
-@import '../../styles/trumps/_truncate.scss';
+@import '../../styles/trumps/_u-ellipsis.scss';
 
 .jobs-view {
   /* icon */
@@ -23,7 +22,7 @@
 
 .job__name,
 .job__path {
-  @extend ._truncate-approx-char-count--inline;
+  @extend .u-ellipsis;
+
+  display: inline-block;
 }
-.job__name { --width: 15ch; }
-.job__path { --width: 30ch; }
